[package]
name = "bsor"
version = "0.3.0"
description = "BS Open Replay (bsor) loader"
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/motzel/rust-bsor"
keywords = ["bsor", "beat-saber", "beat-leader"]
edition = "2021"
exclude = ["src/main.rs"]

[lib]
name = "bsor"
path = "src/lib.rs"

[dev-dependencies]
rand = "0.8.5"